--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             </div>
             <div class="buttons">
                 <div class="row">
+                    <button onclick="clear()"  class="btn">C</button>
+                </div>
+                <div class="row">
+                    
                     <button onclick="buttonclick(7)" class="btn">7</button>
                     <button onclick="buttonclick(8)" class="btn">8</button>
                     <button onclick="buttonclick(9)" class="btn">9</button>
