--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="buttons">
                 <div class="row">
-                    <button onclick="clear()"  class="btn">C</button>
+                    <button onclick="clearDisplay()"  class="btn">C</button>
                 </div>
                 <div class="row">
                     
@@ -42,7 +42,7 @@
                     <button onclick="buttonclick(0)" class="btn">0</button>
                     <button onclick="buttonclick('.')" class="btn">.</button>
                     <button onclick="buttonclick('+')" class="btn">+</button>
-                    <button onclick="buttonclick('=')" class="btn">=</button>
+                    <button onclick="equalClick()" class="btn">=</button>
                 </div>
             </div>
            
